@@ -28,8 +28,9 @@
 DEFMODULE(i18n,"I18N")
 
 /* Returns the <locale.h> value corresponding to a LC_... constant. */
-DEFCHECKER(check_locale_category,prefix=LC, MESSAGES ALL COLLATE CTYPE MONETARY\
-           NUMERIC TIME PAPER NAME ADDRESS TELEPHONE MEASUREMENT IDENTIFICATION)
+DEFCHECKER(check_locale_category,prefix=LC,default=LC_MESSAGES, \
+           ALL COLLATE CTYPE MESSAGES MONETARY NUMERIC TIME \
+           PAPER NAME ADDRESS TELEPHONE MEASUREMENT IDENTIFICATION)
 
 #ifdef GNU_GETTEXT
 
@@ -94,39 +95,44 @@ DEFUNR(I18N:GETTEXT, msgid &optional domain category)
 DEFUNR(I18N:NGETTEXT,msgid msgid_plural n &optional domain category)
 { /* returns the plural form of the translation for of msgid and n in
      the given domain, depending on the given category. */
-  object msgid = (STACK_4 = check_string(STACK_4));
-  object msgid_plural = (STACK_3 = check_string(STACK_3));
-  object arg = (STACK_2 = check_pos_integer(STACK_2));
-  uint32 n;
-  if (posfixnump(arg))
-    n = posfixnum_to_L(arg);
-  else {
-    /* arg is a Bignum. Plural form depends only on (mod arg 1000000). */
-    pushSTACK(arg); pushSTACK(fixnum(1000000)); funcall(L(mod),2);
-    n = 1000000 + posfixnum_to_L(value1);
-  }
-  msgid = STACK_4; msgid_plural = STACK_3;
- #ifdef GNU_GETTEXT
-  with_string_0(msgid,Symbol_value(S(ascii)),msgid_asciz, {
-    with_string_0(msgid_plural,Symbol_value(S(ascii)),msgid_plural_asciz, {
-      object domain = STACK_1;
-      if (missingp(domain)) {
-        int category = check_locale_category(STACK_0);
-        VALUES1(do_ngettext(msgid_asciz,msgid_plural_asciz,NULL,
-                            n,category));
-      } else {
-        domain = check_string(domain);
-        with_string_0(domain,Symbol_value(S(ascii)),domain_asciz, {
-          int category = check_locale_category(STACK_0);
-          VALUES1(do_ngettext(msgid_asciz,msgid_plural_asciz,domain_asciz,
-                              n,category));
+  STACK_4 = check_string(STACK_4); /* msgid */
+  STACK_3 = check_string(STACK_3); /* msgid_plural */
+  {
+    object arg = (STACK_2 = check_pos_integer(STACK_2));
+    uint32 n;
+    if (posfixnump(arg))
+      n = posfixnum_to_L(arg);
+    else {
+      /* arg is a Bignum. Plural form depends only on (mod arg 1000000). */
+      pushSTACK(arg); pushSTACK(fixnum(1000000)); funcall(L(mod),2);
+      n = 1000000 + posfixnum_to_L(value1);
+    }
+    {
+      object msgid = STACK_4;
+      object msgid_plural = STACK_3;
+     #ifdef GNU_GETTEXT
+      with_string_0(msgid,Symbol_value(S(ascii)),msgid_asciz, {
+        with_string_0(msgid_plural,Symbol_value(S(ascii)),msgid_plural_asciz, {
+          object domain = STACK_1;
+          if (missingp(domain)) {
+            int category = check_locale_category(STACK_0);
+            VALUES1(do_ngettext(msgid_asciz,msgid_plural_asciz,NULL,
+                                n,category));
+          } else {
+            domain = check_string(domain);
+            with_string_0(domain,Symbol_value(S(ascii)),domain_asciz, {
+              int category = check_locale_category(STACK_0);
+              VALUES1(do_ngettext(msgid_asciz,msgid_plural_asciz,domain_asciz,
+                                  n,category));
+              });
+          }
           });
-      }
-      });
-    });
- #else
-  VALUES1(n == 1 ? msgid : msgid_plural);
- #endif
+        });
+     #else
+      VALUES1(n == 1 ? msgid : msgid_plural);
+     #endif
+    }
+  }
   skipSTACK(5);
 }
 
